chgmgmt_build/src/objects/EvaluationEvent__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>評価終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>評価年度</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>設問内容1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>設問内容2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>評価開始日</label>
        <type>Date</type>
    </fields>
    <label>評価イベント</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>評価イベント名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>評価イベント</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>